--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,24 @@
         "laravel/framework": "^6.2",
         "laravel/nova": "^2.9"
     },
+    "require-dev": {
+        "orchestra/testbench": "^4.0",
+        "phpunit/phpunit": "^8.0"
+    },
     "autoload": {
         "psr-4": {
             "Giuga\\LaravelNovaSidebar\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Giuga\\LaravelNovaSidebar\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+
     },
     "extra": {
         "laravel": {
