--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -17,4 +17,6 @@ checks:
         fix_line_ending: true
         fix_identation_4spaces: true
         fix_doc_comments: true
+        excluded_dependencies:
+            - laravel/nova
 
